# RaumKlang

./: .gitignore  CMakeLists.txt  Doxyfile
include/: RaumKlang.h  RaumKlang.hpp
include/raumklang/: ConsoleLogger.hpp  DataSource.hpp  FileLogger.hpp  FileSource.hpp  Listener.hpp  Logger.hpp  MemorySource.hpp  ReferenceCounted.hpp  Sound.hpp  SoundDataReceiver.hpp  SoundDevice.hpp  SoundDriver.hpp  SoundEngine.hpp  SoundFormat.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStopEventReceiver.hpp  SoundStream.hpp  StreamLoader.hpp  Vector3.hpp
media/: license.txt
src/: ConsoleLogger.cpp  FileLogger.cpp  FileSource.cpp  Logger.cpp  MemorySource.cpp  Mutex.cpp  Mutex.hpp  OggVorbisLoader.cpp  OggVorbisLoader.hpp  OggVorbisStream.cpp  OggVorbisStream.hpp  PCMStream.cpp  PCMStream.hpp  RawLoader.hpp  ScopedLock.cpp  ScopedLock.hpp  Sound.cpp  SoundEngine.cpp  SoundRecorder.cpp  SoundSource.cpp  WavLoader.cpp  WavLoader.hpp  WavStream.cpp  WavStream.hpp
src/c/: Listener.cpp  Sound.cpp  SoundEngine.cpp
src/openal/: ListenerOpenAL.cpp  ListenerOpenAL.hpp  OpenAL.hpp  SoundEngineOpenAL.cpp  SoundEngineOpenAL.hpp  SoundOpenAL.cpp  SoundOpenAL.hpp  SoundRecorderOpenAL.cpp  SoundRecorderOpenAL.hpp  SoundSourceOpenAL.cpp  SoundSourceOpenAL.hpp
tests/: test1.cpp
tutorials/01.QuickStart/: 01.QuickStart.cpp
tutorials/02.3DSound/: 02.3DSound.cpp
tutorials/06.C/: 06.C.c
